index.css
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');

::-webkit-scrollbar {
    width: 0;
}

body {
    font-family: 'Lato', sans-serif;
    display: grid;
    grid-template-rows: auto auto auto;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: hsl(0, 0%, 17%);
}

header, main {
    padding: 10px 72px;
}

header img {
    height: 65px;
}

header img:hover {
    opacity: 60%;
    transition: all .5s ease;
}

header img, .navigation {
    display: inline-flex;
    vertical-align: middle;
}

.navigation > ul {
    display: flex;
    flex-flow: row nowrap;
    margin-left: 36px;
}

.navigation li + li {
    margin-left: 36px;
}

.navigation a {
    text-transform: uppercase;
    text-decoration: none;
    color: hsl(0, 0%, 100%);
}

.navigation a:hover {
    color: hsl(0, 0%, 60%);
    transition: all .5s ease;
}

.actions a {
    text-transform: uppercase;
    text-decoration: none;
    font-size: 14px;
    font-weight: 700;
    color: hsl(0, 0%, 100%);
    padding: 10px 30px;
    border: 2px solid hsl(0, 0%, 100%);
}

.actions a + a{
    margin-left: 36px;
}

.actions a:hover {
    border: 2px solid hsl(37, 71%, 36%);
    background-color: hsl(37, 71%, 36%);
    transition: all .5s ease;
}

img {
    max-width: 100%;
}

.hero {
    position: relative;
}

.call-to-action {
    text-align: center;
    width: 100%;
}

.hero .call-to-action {
    position: absolute;
    bottom: 25%;
}

.call-to-action p {
    text-transform: uppercase;
    font-size: 40px;
    font-weight: 700;
    color: hsl(0, 0%, 100%);
    margin-bottom: 1em;
    text-shadow: 2px 2px 1px black;
}

.call-to-action a {
    text-transform: uppercase;
    text-decoration: none;
    font-size: 14px;
    font-weight: 700;
    color: hsl(0, 0%, 100%);
    background-color: hsl(37, 71%, 36%);
    padding: 10px 30px;
    border: 2px solid hsl(37, 71%, 36%);
}

.call-to-action a:hover {
    background-color: hsl(43, 86%, 28%);
    border: 2px solid hsl(43, 86%, 28%);
    transition: all .5s ease;
}

main {
    padding-top: 72px;
    padding-bottom: 48px;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 36px 72px;
}

h1 {
    grid-row: 1 / span 1;
    grid-column: 1 / span 1;
    text-transform: uppercase;
    font-size: 32px;
    font-weight: 600;
    color: black;
    margin-bottom: 1em;
}

h2 {
    text-transform: uppercase;
    font-size: 20px;
    font-weight: 600;
    color: black;
    margin-bottom: 1em;
}

main p {
    padding-bottom: 36px;
}

.benefit {
    margin-bottom: 2em;
}

.benefit a {
    text-transform: uppercase;
    text-decoration: none;
    font-size: 14px;
    font-weight: 700;
    color: hsl(0, 0%, 100%);
    background-color: hsl(37, 71%, 36%);
    padding: 10px 30px;
    border: 2px solid hsl(37, 71%, 36%);
}

.benefit a:hover {
    background-color: hsl(43, 86%, 28%);
    border: 2px solid hsl(43, 86%, 28%);
    transition: all .5s ease;
}

.benefit-1 {
    grid-row: 2 / span 1;
    grid-column: 1 / span 1;
}

.benefit-2 {
    grid-row: 2 / span 1;
    grid-column: 2 / span 1;
}

.benefit-3 {
    grid-row: 3 / span 1;
    grid-column: 1 / span 1;
}

.benefit-4 {
    grid-row: 3 / span 1;
    grid-column: 2 / span 1;
}

